--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "@coinbase/x402": "^1.0.0"
-  }
+    "@coinbase/x402": "^0.6.6"
+  },
+  "license": "MIT"
 }
