--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "@coinbase/x402": "^0.6.6"
+    "@coinbase/cdp-sdk": "^0.6.6",
+    "ws": "^8.18.0",
+    "fastestsmallesttextencoderdecoder": "^1.0.22"
   },
   "license": "MIT"
 }
