--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "@coinbase/x402": "^0.6.6",
-    "x402-express": "^0.1.0",
+    "x402-express": "0.1.0",
     "ws": "^8.18.0",
     "fastestsmallesttextencoderdecoder": "^1.0.22"
   },
